# accounts-rs

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  mock_data.sql
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  dev.Dockerfile  sqlx-data.json
backend/.sqlx/: query-077072746fac2e4740b2ed00221487cd4787225e7529bec0641f1283811fa01a.json  query-0a88e646adf6559770bc2e11de0f631fcecf97df33e2e24f301258fd9d2de1db.json  query-0dc4a6d27fe053b52b30acb7685e250f7f0f1ee985d2b2b300e51614564bc174.json  query-0ec598d18374e230bd41fc9af69e311604fde25dfb6dcdcc051a6bf4f9810e1a.json  query-1766cd0fc8be06b25faafc5a7c14623341749ca6ef3dd46c2d2ea03639ddeee5.json  query-350b17f2310ebabf68b3ede113bc80c773df30db82678833f51a6ee0a1743dd5.json  query-4611db9fa8de586dbccc1c61bf73457e5009c9e37a196748682eceebf795ea26.json  query-485f1596b76f210d2abaa088df44a278e45e52f2b7bfeafd7e12cc048966cd96.json  query-592a903c728d7ebdd8cd57c7101dc42bc837aa2b7b186aa97d72463fe2c11a80.json  query-5bda4bb169993defe96cd625dbbe2dde4287833cd664579dcb16885e01b056bf.json  query-5c922a953a308e19dd6eba7413611751b9933b820b1f157380ef55ba7fea6f8d.json  query-60a91284f1609de0e0d04cd7e6ab2d8177ab17b052f1381663c8186a5965b8cb.json  query-6ab44abcde941d1a69d973a96c1c7239a5030d22a8629908fd7668220b6dc0ff.json  query-77ca7abecfac14448adcc5540fc794369d15ff5a8083fb775b8cf009dfd473ed.json  query-8644437c3b70599047acb57952187d70a4c76a5e3e582cffdad81e79e0a15dd2.json  query-86653b310b45106322bfb9afa1c382cd36f7e8385fb23dbf3b3372b3016b0be5.json  query-9033734ee5453c40bf168699e15e5386ba434393d9b7c73e65c73405784a0931.json  query-9402513e88a48fc54d32a7eabef57a17adf40817dc20fecefe3893611b7f15e1.json  query-96ec1022c0f8ada1886fe02b8db7d1f827cb97838456ff32283f1bb661603b30.json  query-9b88fedbbf5e85eeb98c987434609e712de0eae9120d37527c5fd6eebfa27be4.json  query-aaef9dc931c5beadc388ec3245a93e6addca19760cf161984d72aba84ed5833b.json  query-b17296b8b80ec27c20333bf06fec3a786f603e9368ac30fb25816b075b27baa0.json  query-b937c299da7cb4a9a1a47627e1a33a46af30ebc34a000d8c3d6193eb78fd1eca.json  query-bde44ba901f8306faf3a87bb49a731767ce01d08678dfb3a7f864e8da6ed9205.json  query-c7e5e279fa6c00a5b64d881f50a541deae4843555a714e5a70f8697d39e43bd5.json  query-d38f1393a0ec7fa7fab536db57aa4fc965bce88335a4935e6fe2312c7b97076a.json  query-d777a024a54d22b5c4727960645e94b58b5b47dc13bf131a2306b478d43112ba.json  query-d9bbd115eddcc6f8d71be1eb4804159c251bddb5e048cd56b1eaadb9ddfaa156.json  query-e87c4f70ea8c4e829716d2cdc4242f1e743617bafc77a3a4cd960f91d866b934.json  query-f7edfc4f427cd23c18741911bbc725f161c94ad0101989a052a99c55677ede13.json  query-fc1ffe916bcfa770e6c50b2be14f632ff635c19ce1e68106f5d3cc6d91b325f2.json  query-fe22fe79e83a46eab8e63d59c03d6d25bef41b059bfaaaf1985131c6a33cc61a.json
backend/migrations/: 20211029135552_initial.down.sql  20211029135552_initial.sql  20211029135552_initial.up.sql  (+13 more)
(+174 files in other folders)
