[package]
name = "accounts_rs"
version = "0.1.0"
edition = "2021"
authors = ["Vidar Magnusson <accounts-rs@vidarmagnusson.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json", "secrets"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocket_dyn_templates = {version= "0.1.0-rc.1", features = ["handlebars"]}
dotenv = "0.15"
sqlx = { version = "0.4", features = ["runtime-async-std-rustls", "postgres", "macros", "migrate", "chrono", "uuid", "offline"] }
thiserror = "1.0"
uuid = { version = "0.8" }
log = "0.4.14"
argon2 = "0.3.2"
rand = "0.8.4"
aes-gcm = "0.9.4"
futures = "0.3"
tokio = "1.17"
jwt = { version = "0.16", features = ["openssl"] }
openssl = "0.10"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.13"
mobc-redis = "0.7.0"
mobc = "0.7.3"