[package]
name = "accounts_rs"
version = "0.1.0"
edition = "2021"
authors = ["Vidar Magnusson <accounts-rs@vidarmagnusson.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json", "secrets"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocket_dyn_templates = { version = "0.1.0-rc", features = ["handlebars"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = [
    "runtime-async-std-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
thiserror = "1.0"
uuid = { version = "1.7", features = ["serde"] }
log = "0.4"
argon2 = "0.5"
rand = "0.8"
aes-gcm = "0.10"
futures = "0.3"
tokio = "1.35"
jwt = { version = "0.16", features = ["openssl"] }
openssl = { version = "0.10", features = ["vendored"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
mobc-redis = "0.8"
mobc = "0.8"
eyre = "0.6.12"
color-eyre = "0.6.3"
